Layout bugs fixed

--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -38,5 +38,13 @@
 	font-family: 'Slot-Regular';
 	src:font-url('Slot-Regular.otf') format('opentype');
 }
+@font-face {
+	font-family: 'Lato-Light';
+	src:font-url('Light-Light.ttf') format('truetype');
+}
+@font-face {
+	font-family: 'Lato-Medium';
+	src:font-url('Lato-Medium.ttf') format('truetype');
+}
 
 
